--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Geotimezone : Provides an IANA time zone identifier from latitude and longitude coordinates.">
+    <meta name="description" content="GeoTimeZone : Provides an IANA time zone identifier from latitude and longitude coordinates.">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Geotimezone</title>
+    <title>GeoTimeZone</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/mj1856/GeoTimeZone">View on GitHub</a>
 
-          <h1 id="project_title">Geotimezone</h1>
+          <h1 id="project_title">GeoTimeZone</h1>
           <h2 id="project_tagline">Provides an IANA time zone identifier from latitude and longitude coordinates.</h2>
 
             <section id="downloads">
@@ -44,7 +44,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Geotimezone maintained by <a href="https://github.com/mj1856">mj1856</a></p>
+        <p class="copyright">GeoTimeZone maintained by <a href="https://github.com/mj1856">mj1856</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
